--- a/ClientApp/app/app.component.html
+++ b/ClientApp/app/app.component.html
@@ -12,7 +12,7 @@
                                                 </button>
                                         </td>
                                 <td class="m-0 p-0  text-right">
-                                        <button class="btn btn-sm btn-success" (click)="fullscreen()">
+                                        <button class="btn btn-sm btn-success" (click)="changeScreen()">
                                                 <i class="fa fa-window-restore fa-lg"></i>
                                         </button>
                                 </td>
