--- a/ClientApp/app/Till/journal.component.html
+++ b/ClientApp/app/Till/journal.component.html
@@ -1,11 +1,10 @@
-<div class="row w-100 m-0 p-0" style="min-height:400px;max-height:400px" (click)="focusJournalInput()">
+<div class="row w-100 m-0 p-0" style="min-height:400px;max-height:400px">
 
-    <input id="journalInput" name="journalInput" class="form-control m-0 p-0" 
-        style="max-height:25px;min-height:25px" (keyup)="onKey($event)" autofocus/>
+    <label class="form-control m-0 p-0" style="max-height:25px;min-height:25px">{{inputValue}}</label>
     <label class="form-control m-0 p-0" style="max-height:25px;min-height:25px">{{journalText}}</label>
 
     <div class="w-100 m-0 p-0" style="overflow-y:scroll; height:350px">
-        <table class="table table-striped m-0 p-0"  style="min-height:350px;max-height:350px">
+        <table class="table table-striped my-0 py-0">
             <thead class="m-0 p-0">
                 <tr class="m-0 p-0" style="min-height:25px;max-height:25px">
                     <th class="m-0 p-0 pl-1">Description</th>
