--- a/ClientApp/app/Till/till.component.html
+++ b/ClientApp/app/Till/till.component.html
@@ -1,4 +1,4 @@
-<div class="row w-100 m-0 p-0" style="min-height: 768px">
+<div id="till" name="till" class="row w-100 m-0 p-0" style="min-height: 768px" (click)="focusTill()">
 	<div class="col-6 m-0 p-0 text-left">
 		<journal-lines></journal-lines>
 		<details-lines></details-lines>
