--- a/ClientApp/app/Till/details.component.html
+++ b/ClientApp/app/Till/details.component.html
@@ -3,7 +3,7 @@
     <table class="table table-condensed m-0 p-0"  style="min-height:25px;max-height:25px">
         <tr class="m-0 p-0 text-success" style="min-height:25px;max-height:25px">
             <th class="m-0 p-0 text-left">{{mod}}</th>
-            <th class="m-0 p-0 text-center">{{orderType}} Id: {{orderId}} Seats: {{seats}}</th>
+            <th class="m-0 p-0 text-center">{{orderTypeDetails}}</th>
             <th class="m-0 p-0 px-2 text-right">Items: {{noOfItems}}</th>
         </tr>
     </table>
