--- a/ClientApp/app/Till/journal.component.html
+++ b/ClientApp/app/Till/journal.component.html
@@ -18,7 +18,9 @@
             </thead>
             <tbody class="m-0 p-0">
                 <tr *ngFor="let eposTransline of eposTranslines" class="m-0 p-0" style="min-height:25px;max-height:25px"
-                    [ngClass]="{'text-danger':eposTransline.lineStatus}">
+                    [style.background]="selectedEposTransLine.lineNo==eposTransline.lineNo?'yellow':'white'"
+                    [ngClass]="{'text-danger':eposTransline.lineStatus}"
+                    (click)="setSelectedEposTransLine(eposTransline)">
                     <td class="m-0 p-0 pl-1">
                         {{eposTransline.description}}
                     </td>
