--- a/ClientApp/app/app.component.html
+++ b/ClientApp/app/app.component.html
@@ -3,7 +3,7 @@
         <h6 *ngFor="let e of error">{{e}}</h6>
         <button class="btn btn-warning" (click)="clearError()">OK</button>
 </div>
-<div class="px-2 m-0 w-100 h-100" id="pos" *ngIf="error == null">
+<div class="px-2 m-0 w-100 h-100" style="background: white" id="pos" *ngIf="error == null">
         <div class="navbar navbar-expand-xs bg-info navbar-dark m-0 p-0" style="max-height:30px">
                 <table class="table m-0 p-0">
                         <tr class="m-0 p-0">
@@ -11,12 +11,12 @@
                                         <a class="navbar-brand" href="#">{{Device?.storeName||'VBR'}}</a>
                                 </td>
                                 <td class="m-0 p-0  text-left">
-                                                <button class="btn btn-sm btn-success" (click)="gohome()">
+                                                <button class="btn btn-sm btn-success" (mouseup)="gohome()">
                                                         <i class="fa fa-home fa-lg"></i>
                                                 </button>
                                         </td>
                                 <td class="m-0 p-0  text-right">
-                                        <button class="btn btn-sm btn-success" (click)="changeScreenSize()">
+                                        <button class="btn btn-sm btn-success" (mouseup)="changeScreenSize()">
                                                 <i class="fa fa-window-restore fa-lg"></i>
                                         </button>
                                 </td>
@@ -26,5 +26,8 @@
                         </tr>
                 </table>  
         </div>
+       
         <router-outlet></router-outlet>
+
+        
 </div>
