--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>VBR @ViewData["Title"]</title>
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+        <link  rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.min.css" />
     </head>
     <body class="m-0 p-0 w-100">
         @RenderBody()
